[TASK] compatibilty to TYPO3 6.2 LTS and tt_address < 3.0
Change-Id: I7cde161b55affdc17dcc1f214f2e6f8a8d26b14e

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "issues": "https://forge.typo3.org/projects/extension-direct_mail_subscription"
   },
   "require": {
-    "typo3/cms-core": ">=6.2,<8.0",
-    "typo3-ter/tt_address": ">=2.3"
+    "typo3/cms-core": ">=6.2,<8.0"
   },
   "autoload": {
     "psr-4": {
