--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "autoload": {
     "psr-4": {
-      "DirectMailTeam\\DirectMailSubscription\\": "Classes"
+      "DirectMailTeam\\DirectMailSubscription\\": "pi"
     },
     "files": ["pi/class.dmailsubscribe.php"]
   },
